// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə kɪg siːz ðə wulh",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə dʌgs siː ðə wulhs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə kɪg wʌkɪŋz æt ðə dɪvəd",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə kɪg nat siːz ðə wulh",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "rege shireəθ lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hahane shireənt lulupuum",
    },
    {
      "english": "i give you the bread",
      "target": "ego dareo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "rege ambulareθ flume",
    },
    {
      "english": "the king does not see the wolf",
      "target": "rege non shireəθ lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "liːmiːliːmiː lukil hoːweːliː",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hoːhoːweːliː lukil hoːhoːweːliː",
    },
    {
      "english": "i give you the bread",
      "target": "mi pala sina",
    },
    {
      "english": "the king walks at the river",
      "target": "liːmiːliːmiː tawatawo hahiː telohuloː",
    },
    {
      "english": "the king does not see the wolf",
      "target": "liːmiːliːmiː ala lukil hoːweːliː",
    },
  ],
  "preset": "tokipona",
}
`;
